k8s/manifests/radarr-regular/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-regular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr-regular
  template:
    metadata:
      labels:
        app: radarr-regular
    spec:
      containers:
        - name: radarr-regular
          image: ghcr.io/linuxserver/radarr:6.3.0
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
              subPath: regular/movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-regular-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: movies
          persistentVolumeClaim:
            claimName: media
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
