k8s/manifests/radarr-regular/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-regular
spec:
  type: ClusterIP
  selector:
    app: radarr-regular
  ports:
    - port: 7879
      targetPort: 7878
